// Copyright 2021. The Tari Project
//
// Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
// following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
// disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the
// following disclaimer in the documentation and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote
// products derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
// INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
// WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
// USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
syntax = "proto3";

package tari.dan.validator_node;

import "common.proto";
import "consensus.proto";
import "network.proto";

service ValidatorNode {
  rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionResponse);
}

enum Status {
  Accepted = 0;
  Errored = 1;
}


message InvokeReadMethodRequest{
  bytes contract_id = 1;
  uint32 template_id = 2;
  string method = 3;
  bytes args = 4;
  bytes sender = 5;
}

message InvokeReadMethodResponse {
  bytes result = 1;
}

message InvokeMethodRequest{
  bytes contract_id = 1;
  uint32 template_id = 2;
  string method = 3;
  bytes args = 4;
  bytes sender = 5;
}

message InvokeMethodResponse {
  bytes result = 1;
  Status status = 2;
}

message GetSidechainStateRequest {
  bytes contract_id = 1;
}

message GetSidechainStateResponse {
  oneof state {
    string schema = 1;
    KeyValue key_value = 2;
  }
}

message KeyValue {
  bytes key = 1;
  bytes value = 2;
}

message GetStateOpLogsRequest {
  bytes contract_id = 1;
  uint64 height = 2;
}

message GetStateOpLogsResponse {
  repeated StateOpLog op_logs = 1;
}

message StateOpLog {
  uint64 height = 1;
  string operation = 2;
  string schema = 3;
  bytes key = 4;
  bytes value = 5;
  bytes merkle_root = 6;
}

message GetTipNodeRequest{
  bytes contract_id = 1;
}

message GetTipNodeResponse {
  tari.dan.common.Node tip_node = 1;
}

message GetIdentityRequest {}

message GetIdentityResponse {
  bytes public_key = 1;
  string public_address = 2;
  bytes node_id = 3;
}

message SubmitTransactionRequest{
  tari.dan.common.Transaction transaction = 1;
}

message SubmitTransactionResponse {
  string status = 1;
  bytes result = 2;
}

message DanMessage {
  oneof message {
    tari.dan.consensus.HotStuffMessage hot_stuff = 1;
    tari.dan.consensus.VoteMessage vote = 2;
    tari.dan.common.Transaction new_transaction = 3;
    tari.dan.network.NetworkAnnounce network_announce = 4;
  }
}
